--- a/mallard.cabal
+++ b/mallard.cabal
@@ -16,7 +16,7 @@ library
     hs-source-dirs:    lib
     default-language:  Haskell2010
 
-    ghc-options:       -Wall -Werror -Wno-unused-do-bind
+    ghc-options:       -Wall -Wno-unused-do-bind
 
     exposed-modules:   Database.Mallard.File
                        Database.Mallard.Graph
@@ -52,7 +52,7 @@ executable mallard
     hs-source-dirs:     app
     default-language:   Haskell2010
 
-    ghc-options:        -Wall -Werror
+    ghc-options:        -Wall
 
     build-depends:      base
 
