--- a/mallard.cabal
+++ b/mallard.cabal
@@ -1,5 +1,5 @@
 name:               mallard
-version:            0.5.0.0
+version:            0.5.0.1
 synopsis:           Database migration and testing as a library.
 description:        Please see README.md
 homepage:           https://github.com/AndrewRademacher/mallard
@@ -40,7 +40,7 @@ library
                      , hasql-transaction
                      , Interpolation
                      , lens
-                     , megaparsec
+                     , megaparsec   <6
                      , mtl
                      , path
                      , path-io
