--- a/mallard.cabal
+++ b/mallard.cabal
@@ -1,5 +1,5 @@
 name:               mallard
-version:            0.6.0.1
+version:            0.6.0.2
 synopsis:           Database migration and testing as a library.
 description:        Please see README.md
 homepage:           https://github.com/AndrewRademacher/mallard
@@ -11,6 +11,9 @@ copyright:          2017 Andrew Rademacher <andrewrademacher@icloud.com>
 category:           Database
 build-type:         Simple
 cabal-version:      >=1.10
+
+extra-source-files:
+    README.md
 
 library
     hs-source-dirs:    lib
