--- a/mallard.cabal
+++ b/mallard.cabal
@@ -14,7 +14,7 @@ cabal-version:      >=1.10
 
 extra-source-files:
     README.md
-    sql/mallard/*
+    sql/mallard/*.sql
 
 library
     hs-source-dirs:    lib
