Completed implementation of deb package building.

--- a/docker/images/mallard-deb/Dockerfile
+++ b/docker/images/mallard-deb/Dockerfile
@@ -29,3 +29,5 @@ RUN cp $(stack exec -- which mallard) /tmp/installdir/usr/local/bin/mallard
 RUN fpm -s dir -t deb -n mallard -v 0.6.1.1 -C /tmp/installdir \
         -d libpq5 \
         usr/local/bin/mallard
+
+CMD cp mallard_0.6.1.1_amd64.deb /dist
