--- a/mallard.cabal
+++ b/mallard.cabal
@@ -1,5 +1,5 @@
 name:               mallard
-version:            0.6.1.2
+version:            0.6.1.3
 synopsis:           Database migration and testing as a library.
 description:        Please see README.md
 homepage:           https://github.com/AndrewRademacher/mallard
@@ -57,6 +57,8 @@ executable mallard
     default-language:   Haskell2010
 
     ghc-options:        -Wall
+
+    other-modules:      Config
 
     build-depends:      base    >= 4 && < 5
 
