--- a/mallard.cabal
+++ b/mallard.cabal
@@ -22,7 +22,8 @@ library
 
     ghc-options:       -Wall -Wno-unused-do-bind
 
-    exposed-modules:   Database.Mallard.File
+    exposed-modules:   Database.Mallard.Commands.Migrate
+                       Database.Mallard.File
                        Database.Mallard.Graph
                        Database.Mallard.Parser
                        Database.Mallard.Postgre
@@ -92,6 +93,11 @@ test-suite test-mallard
 
                       , mallard
 
+                      , contravariant
+                      , hasql
+                      , hasql-pool
+                      , path
                       , tasty
                       , tasty-quickcheck
                       , tasty-hunit
+                      , turtle
