Added command for repairing checksums.

--- a/mallard.cabal
+++ b/mallard.cabal
@@ -24,6 +24,7 @@ library
 
     exposed-modules:   Database.Mallard.Commands.ConfirmChecksums
                        Database.Mallard.Commands.Migrate
+                       Database.Mallard.Commands.RepairChecksum
                        Database.Mallard.File
                        Database.Mallard.Graph
                        Database.Mallard.Parser
